update setup script to switch to OpenCL on CPU runtime

--- a/Training/MCX2024_1C_mcx_command_line.ipynb
+++ b/Training/MCX2024_1C_mcx_command_line.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
       "collapsed_sections": [
         "7uCmGQauFURF",
         "VUIY5odvC8vI",
@@ -20,9 +19,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "cells": [
     {
@@ -66,7 +63,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once)</font>\n",
+        "!#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once)</font>\n",
         "\n",
         "# install octave and oct2py\n",
         "! sudo apt-get update && sudo apt-get install octave jq libpocl2 pocl-opencl-icd    # install octave (a free matlab clone)\n",
@@ -82,14 +79,14 @@
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /opt/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /opt/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /opt/bin\n",
+        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
+        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
+        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
         "! cp -a $PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex $PWD/MCXStudio/MATLAB/zmat/\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! mcx -L\n",
-        "! mcxcl -L"
+        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "! mcx -L"
       ]
     },
     {
@@ -114,14 +111,14 @@
         "addpath([pwd filesep 'MCXStudio/MATLAB/zmat']);                   % add path to zmat for data compression\n",
         "\n",
         "if(system('which nvidia-smi'))                   % if this runtime does not have NVIDIA GPU support\n",
-        "    addpath([pwd filesep 'MCXStudio/MCXLAB/mcxlabcl']);    % add path to mcxlabcl\n",
+        "    addpath([pwd filesep 'MCXStudio/MATLAB/mcxlabcl']);    % add path to mcxlabcl\n",
         "    USE_MCXCL=1;                                 % set USE_MCXCL flag in the base workspace\n",
         "end"
       ],
       "metadata": {
         "id": "IWg8T2-5SwT4"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -142,6 +139,7 @@
         "which mcx\n",
         "which s2m\n",
         "which zipmat\n",
+        "\n",
         "mcxlab('gpuinfo')     % use this command to list supported CPU or GPU in octave\n",
         "unix('mcx -L')        % use -L flag to list GPU in the command line"
       ],
@@ -233,30 +231,10 @@
         "!mcx --bench"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CslNsWI7FPa-",
-        "outputId": "c88b6a0e-f7a7-4e67-9ceb-da0dfabbb5fd"
+        "id": "CslNsWI7FPa-"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Built-in benchmarks:\n",
-            "\tcube60\n",
-            "\tcube60b\n",
-            "\tcube60planar\n",
-            "\tcubesph60b\n",
-            "\tskinvessel\n",
-            "\tsphshells\n",
-            "\tspherebox\n",
-            "\tcolin27\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1033,120 +1011,10 @@
         "!mcx --help | grep '^.*\\(\\s-\\|==\\)'  # list all parameters in a compact format"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "M3LWbksP6K9g",
-        "outputId": "894d088f-bba5-4526-d4b7-0a0ba707efad"
+        "id": "M3LWbksP6K9g"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "#                      Monte Carlo eXtreme (MCX) -- CUDA                      #\n",
-            "$Rev::d66a0a$\u001b[32mv2024.6\u001b[35m $Date::2024-06-11 18:30:04 -04$ by $Author::Qianqian Fang$\n",
-            "\u001b[1m\u001b[36m== Required option ==\n",
-            "\u001b[0m -f config     (--input)       read an input file in .json or .inp format\n",
-            " --bench ['cube60','skinvessel',..] run a buint-in benchmark specified by name\n",
-            "                               run --bench without parameter to get a list\n",
-            "\u001b[1m\u001b[36m== MC options ==\n",
-            "\u001b[0m -n [0|int]    (--photon)      total photon number (exponential form accepted)\n",
-            " -r [1|+/-int] (--repeat)      if positive, repeat by r times,total= #photon*r\n",
-            " -b [1|0]      (--reflect)     1 to reflect photons at ext. boundary;0 to exit\n",
-            " -B '______'   (--bc)          per-face boundary condition (BC), 6 letters for\n",
-            "    /case insensitive/         bounding box faces at -x,-y,-z,+x,+y,+z axes;\n",
-            "                               overwrite -b if given. \n",
-            "                               '_': undefined, fallback to -b\n",
-            "                               'r': like -b 1, Fresnel reflection BC\n",
-            "                               'a': like -b 0, total absorption BC\n",
-            "                               eg: --bc ______010 saves photons exiting at y=0\n",
-            " -u [1.|float] (--unitinmm)    defines the length unit for the grid edge\n",
-            " -U [1|0]      (--normalize)   1 to normalize flux to unitary; 0 save raw\n",
-            " -E [0|int|mch](--seed)        set random-number-generator seed, -1 to generate\n",
-            " -z [0|1]      (--srcfrom0)    1 volume origin is [0 0 0]; 0: origin at [1 1 1]\n",
-            " -k [1|0]      (--voidtime)    when src is outside, 1 enables timer inside void\n",
-            " -Y [0|int]    (--replaydet)   replay only the detected photons from a given \n",
-            "                               detector (det ID starts from 1), used with -E \n",
-            "                               if -1, replay all detectors and save separately\n",
-            " -V [0|1]      (--specular)    1 source located in the background,0 inside mesh\n",
-            " -e [0.|float] (--minenergy)   minimum energy level to trigger Russian roulette\n",
-            " -g [1|int]    (--gategroup)   number of maximum time gates per run\n",
-            "\u001b[1m\u001b[36m== GPU options ==\n",
-            "\u001b[0m -L            (--listgpu)     print GPU information only\n",
-            " -t [16384|int](--thread)      total thread number\n",
-            " -T [64|int]   (--blocksize)   thread number per block\n",
-            " -A [1|int]    (--autopilot)   1 let mcx decide thread/block size, 0 use -T/-t\n",
-            " -G [0|int]    (--gpu)         specify which GPU to use, list GPU by -L; 0 auto\n",
-            " -G '1101'     (--gpu)         using multiple devices (1 enable, 0 disable)\n",
-            " -W '50,30,20' (--workload)    workload for active devices; normalized by sum\n",
-            " -I            (--printgpu)    print GPU information and run program\n",
-            " --atomic [1|0]                1: use atomic operations to avoid thread racing\n",
-            "\u001b[1m\u001b[36m== Input options ==\n",
-            "\u001b[0m -P '{...}'    (--shapes)      a JSON string for additional shapes in the grid.\n",
-            "                               and added to the existing domain defined via -f \n",
-            "                               or --bench\n",
-            " -j '{...}'    (--json)        a JSON string for modifying all input settings.\n",
-            "                               settings defined by -f or --bench\n",
-            " -K [1|int|str](--mediabyte)   volume data format, use either a number or a str\n",
-            " -a [0|1]      (--array)       1 for C array (row-major); 0 for Matlab array\n",
-            "\u001b[1m\u001b[36m== Output options ==\n",
-            "\u001b[0m -s sessionid  (--session)     a string to label all output file names\n",
-            " -O [X|XFEJPMRL](--outputtype) X - output flux, F - fluence, E - energy deposit\n",
-            "    /case insensitive/         J - Jacobian (replay mode),   P - scattering, \n",
-            "                               M - momentum transfer; R - RF/FD Jacobian\n",
-            "                               L - total pathlength\n",
-            " -d [1|0-3]    (--savedet)     1 to save photon info at detectors; 0 not save\n",
-            " -w [DP|DSPMXVW](--savedetflag)a string controlling detected photon data fields\n",
-            " -x [0|1]      (--saveexit)    1 to save photon exit positions and directions\n",
-            "                               setting -x to 1 also implies setting '-d' to 1.\n",
-            "                               same as adding 'XV' to -w.\n",
-            " -X [0|1]      (--saveref)     1 to save diffuse reflectance at the air-voxels\n",
-            "                               appear at the boundary, pad 0s before using -X\n",
-            " -m [0|1]      (--momentum)    1 to save photon momentum transfer,0 not to save.\n",
-            "                               same as adding 'M' to the -w flag\n",
-            " -q [0|1]      (--saveseed)    1 to save photon RNG seed for replay; 0 not save\n",
-            " -M [0|1]      (--dumpmask)    1 to dump detector volume masks; 0 do not save\n",
-            " -H [1000000] (--maxdetphoton) max number of detected photons\n",
-            " -S [1|0]      (--save2pt)     1 to save the flux field; 0 do not save\n",
-            " -F [jnii|...](--outputformat) fluence data output format:\n",
-            "                               mc2 - MCX mc2 format (binary 32bit float)\n",
-            "                               jnii - JNIfTI format (https://neurojson.org)\n",
-            "                               bnii - Binary JNIfTI (https://neurojson.org)\n",
-            "                               nii - NIfTI format\n",
-            "                               hdr - Analyze 7.5 hdr/img format\n",
-            "                               tx3 - GL texture data for rendering (GL_RGBA32F)\n",
-            " -Z [zlib|...] (--zip)         set compression method if -F jnii or --dumpjson\n",
-            " --dumpjson [-,0,1,'file.json']  export all settings, including volume data using\n",
-            "                               easy sharing; can be reused using -f\n",
-            "\u001b[1m\u001b[36m== User IO options ==\n",
-            "\u001b[0m -h            (--help)        print this message\n",
-            " -v            (--version)     print MCX revision number\n",
-            " -l            (--log)         print messages to a log file instead\n",
-            " -i            (--interactive) interactive mode\n",
-            "\u001b[1m\u001b[36m== Debug options ==\n",
-            "\u001b[0m -D [0|int]    (--debug)       print debug information (you can use an integer\n",
-            " -D [''|RMPT]                  1 R  debug RNG\n",
-            "\u001b[1m\u001b[36m== Additional options ==\n",
-            "\u001b[0m --root         [''|string]    full path to the folder storing the input files\n",
-            " --gscatter     [1e9|int]      after a photon completes the specified number of\n",
-            " --srcid  [0|-1,0,1,2,..]      -1 simulate multi-source separately;0 all sources\n",
-            " --internalsrc  [0|1]          set to 1 to skip entry search to speedup launch\n",
-            " --trajstokes   [0|1]          set to 1 to save Stokes IQUV in trajectory data\n",
-            " --maxvoidstep  [1000|int]     maximum distance (in voxel unit) of a photon that\n",
-            " --maxjumpdebug [10000000|int] when trajectory is requested (i.e. -D M),\n",
-            "\u001b[1m\u001b[36m== Example ==\n",
-            "\u001b[35m       mcx --bench\n",
-            "\u001b[35m       mcx -L\n",
-            "\u001b[0mor (use multiple devices - 1st,2nd and 4th GPUs - together with equal load)\n",
-            "\u001b[35m       mcx --bench cube60b -n 1e7 -G 1101 -W 10,10,10\n",
-            "\u001b[35m       mcx -f input.json -P '{\"Shapes\":[{\"ZLayers\":[[1,10,1],[11,30,2],[31,60,3]]}]}'\n",
-            "\u001b[35m       mcx -f input.json -j '{\"Optode\":{\"Source\":{\"Type\":\"isotropic\"}}}'\n",
-            "\u001b[35m       mcx --bench cube60planar --dumpjson\u001b[0m\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1544,7 +1412,7 @@
         "id": "Vnz4FUBkeTSY",
         "outputId": "b15ccfc0-239c-4571-a2fb-980160b145d0"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1907,7 +1775,7 @@
         "id": "khSWgILWgRKn",
         "outputId": "3bd3abba-298f-499d-b55a-15460429da24"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
