add instructions on maintaining 1 single session

--- a/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
+++ b/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2MjBGv38Sxw5096tA/o9Z",
+      "authorship_tag": "ABX9TyNjus6KsN01ObtZNseBO+0B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,8 +83,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8QsyOOBgAxfA",
-        "cellView": "form"
+        "id": "8QsyOOBgAxfA"
       },
       "outputs": [],
       "source": [
@@ -131,7 +130,7 @@
       "cell_type": "code",
       "source": [
         "%%shell\n",
-        "# @title a shell script cell - first line is `%%shell`\n",
+        "# @title A shell script cell - first line is `%%shell`\n",
         "\n",
         "# in this cell, you are expected to type bash commands\n",
         "\n",
@@ -149,7 +148,7 @@
       "cell_type": "code",
       "source": [
         "%%octave\n",
-        "# @title an Octave/MATLAB script cell - first line is `%%octave`\n",
+        "# @title An Octave/MATLAB script cell - first line is `%%octave`\n",
         "\n",
         "# in this cell, you are expected to type Octave/MATLAB commands\n",
         "\n",
@@ -167,7 +166,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title a Python script cell - if no magic command (`%%`), Jupyter notebook use Python as the default cell type\n",
+        "# @title A Python script cell - if no magic command (`%%`), Jupyter notebook use Python as the default cell type\n",
         "\n",
         "# in this cell, you are expected to type Python commands\n",
         "\n",
@@ -176,10 +175,32 @@
         "\n",
         "print([a.shape, a.dtype])\n",
         "\n",
-        "!ls -l                    %<- start the line with ! to involk shell command in Jupyter Notebook Python codes"
+        "!ls -l                    #<- start the line with ! to involk shell command in Jupyter Notebook Python codes"
       ],
       "metadata": {
         "id": "Zb-IAlmR9SiE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When you are closing a notebook, please remember to select the drop-down menu on the right-top corner of the notebook page, right next to the \"RAM/Disk\" icons, and select **\"Disconnect and delete runtime\"**. Otherwise, your note notebook will not be able to connect to any runtimes because Google Colab only permits one active notebook.\n",
+        "\n",
+        "If you accidentally closing your tab before explicitly disconnecting and deleting your runtime, you can go to menu Runtime, and select **\"Manage sessions\"** to disconnect/delete previously opened runtimes.\n",
+        "\n",
+        "**To avoid being locked out of the Google Colab service, please always maintain a single session.**"
+      ],
+      "metadata": {
+        "id": "MJOuEXLCzsqS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NKM94VsSzglQ"
       },
       "execution_count": null,
       "outputs": []
