--- a/Training/MCX2024_1D_mcxlab_training.ipynb
+++ b/Training/MCX2024_1D_mcxlab_training.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPc57a+LqrB2oSs5EVob4pp"
+      "authorship_tag": "ABX9TyORm7NssBGMOxVeteE2CEc+",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/COTILab/MCX24Workshop/blob/master/Training/MCX2024_1D_mcxlab_training.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -103,6 +114,7 @@
         "addpath([pwd filesep 'MCXStudio/MATLAB/iso2mesh']);               % add path to iso2mesh/jsonlab\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/brain2mesh']);             % add path to brain2mesh\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/zmat']);                   % add path to zmat for data compression\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/hyperspectral_demo']);     % add path to hyperspectral_demo for exec 4\n",
         "\n",
         "struct_levels_to_print(1);\n",
         "print_struct_array_contents(0);\n",
@@ -113,25 +125,10 @@
         "end"
       ],
       "metadata": {
-        "id": "IWg8T2-5SwT4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "d4b34245-a10f-4b82-d78b-18696ea31267"
+        "id": "IWg8T2-5SwT4"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "/opt/bin/nvidia-smi"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -163,7 +160,7 @@
         },
         "outputId": "462ffc1d-a50e-4591-fe52-d5d06d6251d3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -734,7 +731,7 @@
       "metadata": {
         "id": "0d6dXt38CMax"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -832,7 +829,7 @@
       "metadata": {
         "id": "K-nfG2mOTeXl"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +968,7 @@
         "id": "SFPa0q_5Vsv7",
         "outputId": "138bf24f-5c6b-42e7-9b57-c0f55e04cf96"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1079,7 +1076,7 @@
       "metadata": {
         "id": "qkNWl6QIqvd9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1129,7 +1126,7 @@
         "id": "JvQvu_2zsc2R",
         "outputId": "c4385e07-b054-4e75-9d8e-e4dbc7ae86e3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1765,7 +1762,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Exec 3: Improving boundary handling with split-voxel MC (SVMC) - understanding MCX's weaknesses\n",
+        "## Exec 3 - Improving boundary handling with split-voxel MC (SVMC) - understanding MCX's weaknesses\n",
         "\n",
         "MCX relies on voxel-based domain dicretization to model 3-D complex media. It has the benefits\n",
         "- computationally efficient\n",
@@ -1785,7 +1782,7 @@
         "\n",
         "This new technique, named split-voxel MC (SVMC) is essentially a hybrid mesh/voxel based domain that is both memory efficient while is capable of storing oblique surfaces within voxel based data.\n",
         "\n",
-        "![](https://opg.optica.org/getimagev2.cfm?img=8QvLHv7juVaHvy30BVpAeA9KrxBJWx3xouM7%2Fwim%2B0g%3D&uri=boe-11-11-6262-g002)\n"
+        "![](http://mcx.space/wiki/upload/mcx_svmc_diagram.png)\n"
       ],
       "metadata": {
         "id": "vyqvS2Bv7GF-"
@@ -1851,7 +1848,7 @@
           "height": 1000
         },
         "id": "IM6Xy5Rv-TxR",
-        "outputId": "05f23fd7-229c-42d9-e5d1-0d47419fff8a"
+        "outputId": "6ab2154c-9f41-4241-a062-73d6009a9abb"
       },
       "execution_count": 4,
       "outputs": [
@@ -2199,7 +2196,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "initializing streams ...\tinit complete : 1 ms"
+              "initializing streams ...\tinit complete : 0 ms"
             ]
           },
           "metadata": {}
@@ -2235,7 +2232,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "kernel complete:  \t24 ms"
+              "kernel complete:  \t35 ms"
             ]
           },
           "metadata": {}
@@ -2253,7 +2250,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "MCX simulation speed: 100.00 photon/ms"
+              "MCX simulation speed: 20.00 photon/ms"
             ]
           },
           "metadata": {}
@@ -2332,7 +2329,7 @@
         "id": "1SjXlSQC_bby",
         "outputId": "60f71680-9952-4042-f0d3-6f948620b93f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2759,13 +2756,292 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Exec 4 - Hyperspectral data simulation using `mcxlab` in a layered skin model\n",
+        "\n",
+        "#### Prepared and presented by Dr. Steve Jacques\n",
+        "\n",
+        "In this exercise, Dr. Steve Jacques will walk you through an example using MCXLAB to simulate a 4-layer skin tissue model with a sweep of optical properties over a range of wavelengths, producing the hyperspectral diffuse reflectance measurements.\n",
+        "\n",
+        "In this example, you will also learn\n",
+        "- simulating infinite planar source illuminating an infinitely large layered medium using cyclic boundary conditions\n",
+        "- estimating optical properties at different wavelengths using raw chromophore absorption data\n",
+        "- simulating extended space using optical property scaling\n",
+        "-"
+      ],
+      "metadata": {
+        "id": "KtP0gYF5AdeM"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "%%octave\n",
+        "\n",
+        "% runMCXSpectrum_skin1Dreflectance.m\n",
+        "%   Create total reflectance spectrum (300:10:1000nm)\n",
+        "%   for total diffuse reflectance from infintely broad beam.\n",
+        "%   Skin layers:\n",
+        "%       epidermis\n",
+        "%       papillary dermis\n",
+        "%       vasular plexus\n",
+        "%       reticular dermis (semi-infinite thickness)\n",
+        "%   USES:\n",
+        "%       SpectralLIBMUmm.mat\n",
+        "%       makeTissueList_skin.m\n",
+        "%       mcxlab_exec4_draw.m\n",
+        "%\n",
+        "%%% 17june2024.sljacques\n",
+        "\n",
+        "clear cfg label prop\n",
+        "close all\n",
+        "\n",
+        "%% load Spectral Absorption Library: nmLIB(701,1), MUY(701,6), msg\n",
+        "%   MU(:,[oxyB deoxyB Water Carotenoids Melanin Fat])\n",
+        "%   oxyB, deoxyB = mu_a of whole blood (~45% hematocrit=150 g.HGb/liter, MW.HGb = 64500g/mole)\n",
+        "%       https://omlc.org/spectra/hemoglobin/summary.html\n",
+        "%   Water = mu_a of pure water\n",
+        "%    \tG. M. Hale and M. R. Querry, \"Optical constants of water in the 200nm to\n",
+        "%       200-um wavelength region,\" Appl. Opt., 12, 555--563, (1973).\n",
+        "%   Carotenoids = ( exp(-((nmLIB-476)/45).^2) + 1.5*exp(-((nmLIB-440)/30).^2) )/2.0824\n",
+        "%       such that max of mua_a.carotenoids = 1.0 [1/mm] @446nm.Then scale as needed.\n",
+        "%   Melanin = mu_a of interior of cutaneous melanosome\n",
+        "%       mu_a.melanosome = (67.92/mm)*(nmLIB/500nm).^(-3.33)\n",
+        "%   Fat = mu_a of fat.  Data for pure lipid purified from pig fat.\n",
+        "%     \tvan Veen R.L.P. , H.J.C.M. Sterenborg, A. Pifferi, A. Torricelli,\n",
+        "%       R. Cubeddu: Determination of VIS- NIR absorption coefficients\n",
+        "%       of mammalian fat, with time- and spatially resolved diffuse\n",
+        "%       reflectance and transmission spectroscopy,\n",
+        "%       OSA Annual BIOMED Topical Meeting, 2004.\n",
+        "\n",
+        "load SpectralLIBMUmm.mat\n",
+        "msg\n",
+        "whos nmLIB MU\n",
+        "\n",
+        "label(1).s='oxy whole blood';\n",
+        "label(2).s='deoxy whole blood';\n",
+        "label(3).s='water';\n",
+        "label(4).s='carotenoids';\n",
+        "label(5).s='melanosome';\n",
+        "label(6).s='fat';\n",
+        "\n",
+        "figure;clf\n",
+        "\n",
+        "clr='rbcgkm';\n",
+        "f=2;\n",
+        "for i=1:6\n",
+        "    semilogy(nmLIB,MU(:,i),'-','color',clr(i),'linewidth',2)\n",
+        "    hold on\n",
+        "    text(800,5e-4/f^i,label(i).s,'color',clr(i),'fontsize',12)\n",
+        "end\n",
+        "set(gca,'fontsize',14)\n",
+        "xlabel('Wavelength [nm]')\n",
+        "ylabel('\\mu_a [1/mm]')\n",
+        "title('SpectralLIBMUmm.mat')\n",
+        "axis([300 1000 1e-6 1e3])\n",
+        "\n",
+        "%%% Wavelength range for simulations\n",
+        "nmm = [300:10:1000]';\n",
+        "Nnm = length(nmm);\n",
+        "MU2 = interp1(nmLIB,MU,nmm); % <--- interpolate properties\n",
+        "\n",
+        "%%% volume size and unitinmm\n",
+        "Ny=100; Nx=100; Nz=500;\n",
+        "dxyz = 0.010; % mm\n",
+        "\n",
+        "%% % create cfg files\n",
+        "cfg.tstart = 0;\n",
+        "cfg.tend   = 5e-9;\n",
+        "cfg.tstep  = 5e-9;\n",
+        "cfg.isreflect = 1; % enable total internal reflection at exterior boundary\n",
+        "cfg.issaveref = 1; % enable saving escaping light as reflectance\n",
+        "\n",
+        "cfg.unitinmm = dxyz; % mm\n",
+        "\n",
+        "% a uniform planar source illuminating entire top surface of the volume\n",
+        "% cyclic side boundaries mimic infinitely broad beam\n",
+        "w=Nx;   % width [units]\n",
+        "hw=w/2; % half-width\n",
+        "cfg.srctype     = 'planar';\n",
+        "cfg.srcdir      = [0 0 1]; % incident along z-axis\n",
+        "cfg.srcpos      = [Nx/2-hw Ny/2-hw 0];\n",
+        "cfg.srcparam1   = [w 0 0 0];\n",
+        "cfg.srcparam2   = [0 w 0 0];\n",
+        "cfg.bc='ccrccr'; % cyclic side boundaries\n",
+        "\n",
+        "cfg.nphoton     = 1e4; % <---- # of photons per wavelength\n",
+        "%cfg.debuglevel  = 'P';\n",
+        "\n",
+        "%% thicknesses of each skin tissue layer\n",
+        "%   epi = epidermis (60 um]\n",
+        "%   pap = papillary dermis (200 um)\n",
+        "%   plx = superficial vascular plexus (200 um)\n",
+        "%   ret = reticular dermis (remaining volume)\n",
+        "d123 = [0.060 0.200 0.200];     % epi pap plx\n",
+        "d4 = (Nz-2)*dxyz - sum(d123);   % ret\n",
+        "d  = [d123 d4];                 % epi pap plx ret [mm]\n",
+        "nd = round(d/dxyz);             % nd(4,1) = dimensionless units of thickness\n",
+        "csd = cumsum(d);\n",
+        "\n",
+        "%% Simulation for each wavelength\n",
+        "tic\n",
+        "for inm=1:Nnm\n",
+        "    nm = nmm(inm); % wavelength\n",
+        "    clc\n",
+        "    fprintf('\\n\\nwavelength = %0.0f nm\\n\\n',nm)\n",
+        "\n",
+        "    % tissue layer properties : epi pap plx ret\n",
+        "    PRINTON=0;\n",
+        "    tissue = makeTissueList_skin(nm, MU2(inm,:), PRINTON);\n",
+        "    prop(1,:)=[0 0 1 1]; % outer boundary [mua mus g n]\n",
+        "    for i=1:4 % i--> epi pap plx ret\n",
+        "        mua = tissue(i).mua;\n",
+        "        mus = tissue(i).mus;\n",
+        "        g   = tissue(i).g;\n",
+        "        n   = tissue(i).n;\n",
+        "        prop(i+1,:) = [mua mus g n];\n",
+        "    end\n",
+        "    prop(6,:) = [mua*1e3 mus*1e3 g n]; % mimic semi-infinite tissue\n",
+        "    cfg.prop = prop;\n",
+        "\n",
+        "\t  % tissue volume\n",
+        "    % define a 4 layer structure\n",
+        "    % cfg.vol uses 0-->4 (C-code) to point to props(1-->5) (MATLAB)\n",
+        "    cfg.vol = uint8(zeros(Nx,Ny,Nz));        % boundary    0 --> prop(1,:)\n",
+        "    cfg.vol(:,:,1+[1:nd(1)])=1;              % epidermis,  1 --> prop(2,:)\n",
+        "    cfg.vol(:,:,1+nd(1)+[1:nd(2)])=2;        % pap.dermis, 2 --> prop(3,:)\n",
+        "    cfg.vol(:,:,1+sum(nd(1:2))+[1:nd(3)])=3; % plexis,     3 --> prop(4,:)\n",
+        "    cfg.vol(:,:,1+sum(nd(1:3))+[1:nd(4)])=4; % ret.dermis, 4 --> prop(5,:)\n",
+        "    cfg.vol(:,:,Nz-10:Nz-1) = 5; % mimic semi-infinite tissue 5 --> prop(6,:)\n",
+        "    cfg.vol(:,:,Nz) = 1;                     % rear boundary  0 --> prop(1,:)\n",
+        "\n",
+        "    flux=mcxlab(cfg);                        % <---- MCX --- RUN SIMULATION\n",
+        "\n",
+        "    Rxy       = flux.dref(:,:,1) *cfg.tstep*cfg.unitinmm^2;\n",
+        "    Txy       = flux.dref(:,:,Nz)*cfg.tstep*cfg.unitinmm^2;\n",
+        "    R(inm,1)  = sum( Rxy(:));\n",
+        "    T(inm,1)  = sum( Txy(:));\n",
+        "\n",
+        "end % inm\n",
+        "toc\n",
+        "\n",
+        "\n",
+        "%% show tissue parameters @ 500 nm\n",
+        "inm=find(nmm==500);\n",
+        "PRINTON=1;\n",
+        "fprintf('\\nparameters and optical properties @ 500nm\\n')\n",
+        "makeTissueList_skin(500,MU2(inm,:),PRINTON);"
+      ],
       "metadata": {
         "id": "FNV-olxjB-jq"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%octave\n",
+        "\n",
+        "% plotting the results\n",
+        "\n",
+        "close all\n",
+        "\n",
+        "%% Show depth-profile of tissue layers\n",
+        "figure;clf\n",
+        "%sz0 = get(0,'screensize')/2;\n",
+        "%pos = round([0.129 0.171 0.7 1.6].*sz0([3 4 3 4]));\n",
+        "%set(figure(1),'position',pos)\n",
+        "\n",
+        "fz=12; % fontsize for labels\n",
+        "\n",
+        "subplot(211)\n",
+        "plot([1:Nz]',squeeze(cfg.vol(Nx/2,Ny/2,:)),'ro-')\n",
+        "hold on\n",
+        "text(1,.15,'air boundary=0 @ iz=1','fontsize',fz)\n",
+        "for i=1:3\n",
+        "    if i==1 % epidermis\n",
+        "        iz1=2;\n",
+        "    else\n",
+        "        iz1=2+sum(nd(1:i-1));\n",
+        "    end\n",
+        "    z1=dxyz*(iz1-1);\n",
+        "    iz2=1+sum(nd(1:i));\n",
+        "    z2=dxyz*(iz2-1);\n",
+        "    s=sprintf('%s %d%s%d (%0.3f %s %0.3f mm)',...\n",
+        "    tissue(i).name,iz1,'\\rightarrow',iz2,...\n",
+        "    z1,'\\rightarrow',z2);\n",
+        "    text((3+sum(nd(1:i))),i,s,'fontsize',fz)\n",
+        "end\n",
+        "i=4;\n",
+        "iz1=i+sum(nd(1:i-1));\n",
+        "z1=dxyz*(iz1-1);\n",
+        "iz2=i-3+sum(nd(1:i));\n",
+        "z2=dxyz*(iz2);\n",
+        "s=sprintf('%s %d%s%d (%0.3f %s %0.3f mm)',...\n",
+        "tissue(i).name,iz1,'\\rightarrow',iz2,...\n",
+        "z1,'\\rightarrow',z2);\n",
+        "text(35,i-.2,s,'fontsize',fz)\n",
+        "\n",
+        "xlabel('depth pointer, iz')\n",
+        "ylabel('tissue type')\n",
+        "set(gca,'fontsize',16)\n",
+        "axis([0 100 0 5])\n",
+        "\n",
+        "%% Show side-view of tissue layers\n",
+        "subplot(212)\n",
+        "\n",
+        "Vzx=squeeze(cfg.vol(:,Ny/2,:))';\n",
+        "imagesc([1:Nx]*dxyz,[1:Nz]*dxyz,Vzx)\n",
+        "hold on\n",
+        "text(0.05,0.045,'epidermis','fontsize',14,'color','w')\n",
+        "text(0.05,.15,'papillary dermis','fontsize',14)\n",
+        "text(0.05,0.34,'vascular plexus','fontsize',14)\n",
+        "text(0.05,0.6,'reticular dermis','fontsize',14)\n",
+        "\n",
+        "colorbar\n",
+        "axis([dxyz 1 dxyz 1])\n",
+        "\n",
+        "%% Plot R,T spectra\n",
+        "figure;clf\n",
+        "%sz0 = get(0,'screensize')/2;\n",
+        "%pos = round([0.918 0.171 0.700 1.6].*sz0([3 4 3 4]));\n",
+        "%set(figure(2),'position',pos)\n",
+        "\n",
+        "subplot(211)\n",
+        "\n",
+        "imagesc(Rxy)\n",
+        "axis equal\n",
+        "xlabel('x [mm]')\n",
+        "ylabel('y [mm]')\n",
+        "title('R(y,x) [mm^{-2}]')\n",
+        "colorbar\n",
+        "\n",
+        "subplot(212)\n",
+        "plot(nmm,R,'ro-','linewidth',2)\n",
+        "hold on\n",
+        "plot(nmm,T,'bo-','linewidth',2)\n",
+        "xlabel('Wavelength')\n",
+        "ylabel('R_d, T_t')\n",
+        "title('skin: epi,pap,plx,ret','fontweight','normal')\n",
+        "set(gca,'fontsize',16)\n",
+        "axis([300 1000 0 1])"
+      ],
+      "metadata": {
+        "id": "ITASIqJM-vgr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exec 5 - Solving inverse problem using MCX"
+      ],
+      "metadata": {
+        "id": "KqVct1HfDbWm"
+      }
     }
   ]
 }
