update setup script

--- a/Training/MCX2024_1D_mcxlab_training.ipynb
+++ b/Training/MCX2024_1D_mcxlab_training.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPrhkl5wpVTnDkoL9NMyPM+",
+      "authorship_tag": "ABX9TyPW595W95iAf4EWxqhopD5Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,13 +84,13 @@
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx*\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl*\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc*\" \"$PWD\"\n",
         "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ -z \"${COLAB_GPU}\" ]] && mv \"$PWD/mcxcl\" \"$PWD/mcx\"\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"$PWD/mcxcl\" \"$PWD/mcx\"\n",
         "! mcx -L"
       ]
     },
